--- a/public/css/login-main.css
+++ b/public/css/login-main.css
@@ -343,7 +343,7 @@ input.input100 {
   top: -1px;
   left: -1px;
   pointer-events: none;
-  border: 1px solid #6675df;
+  border: 1px solid #D51D19;
   border-radius: 10px;
 
   visibility: hidden;
@@ -494,7 +494,7 @@ input.input100 {
 }
 
 .login100-form-btn:hover {
-  background: #333333;
+  background: #970019;
 }
 
 
